Integrando Zebra API

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./ebapi-module.js"></script>
+    <script type="module" src="./barcode.js"></script>
+
   </body>
 </html>
